Home page Styles

--- a/wp-content/themes/askonasholt2016/assets/scss/components/_text-banner.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/components/_text-banner.scss
@@ -9,6 +9,8 @@
     	color: white;
     	max-width: 90%;
     	margin: 0 auto;
+        padding: $sitepadding-large 0;
+
     	.text-banner-area {
     		.banner-header {
     			font-size: 24px;
