--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_magazine-item.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_magazine-item.scss
@@ -45,6 +45,9 @@
 			display: flex;
 			margin-right: 10px;
 		}
+		span.category {
+			font-weight: bold;
+		}
 	}
 	span.magazine-item-copy p {
 	    font-size: 15px;
