--- a/wp-content/themes/askonasholt2016/assets/scss/components/_artist-details.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/components/_artist-details.scss
@@ -119,11 +119,15 @@
 
 div#video-audio {
 	background: $bgdarkgrey;
+	margin-top: $sitepadding;
 	h4.section-header {
 		color: #ffffff;
 	}
 	h3.section-header, a.view-link {
 		color: #ffffff;
+	}
+	.flex-video {
+		margin-bottom: 0;
 	}
 }
 
@@ -146,6 +150,7 @@ div#video-audio {
 	max-width: 100vw;
 	margin-left: 0;
 	margin-right: 0;
+	padding-bottom: $sitepadding;
 }
 
 
@@ -176,6 +181,26 @@ div#video-audio {
 .artist-photo-wrapper:hover, .magazine-item-thumb:hover {
 	.overlay {
 		display: block;
+	}
+}
+
+
+//Load more button styles
+.post-type-archive-artists {
+	article {
+		position: relative;
+		.archive__load-more {
+			@include center(x);
+			bottom: 0;
+			a {
+				color: $brand-red;
+				font-weight: bold;
+			}
+		}
+		.alert.alert-warning {
+			@include center(x);
+			bottom: 0;
+		}
 	}
 }
 
