--- a/wp-content/themes/askonasholt2016/assets/stylesheets/foundation.css
+++ b/wp-content/themes/askonasholt2016/assets/stylesheets/foundation.css
@@ -9692,14 +9692,23 @@ body.post-type-archive-artists li.cat-item-all a {
   background-color: #BA0C2F;
   color: #fefefe; }
 
+.link-banner .row {
+  max-width: 60.375rem; }
+
 .link-banner .link-banner-button {
   text-align: center;
-  padding: 50px; }
+  padding: 20px 0; }
 
 .link-banner button {
   border: 1px solid #ffffff;
-  padding: 1em 6em;
-  color: #ffffff; }
+  padding: 1em;
+  color: #ffffff;
+  font-weight: bold;
+  width: 65%; }
+
+@media screen and (min-width: 40em) and (max-width: 63.9375em) {
+  .link-banner-button {
+    padding: 50px; } }
 
 ul.single-page-nav {
   list-style-type: none;
@@ -9760,6 +9769,8 @@ ul.single-page-nav {
       display: -ms-flexbox;
       display: flex;
       margin-right: 10px; }
+    .magazine-item .magazine-category span.category {
+      font-weight: bold; }
   .magazine-item span.magazine-item-copy p {
     font-size: 15px; }
   .magazine-item .magazine-item-header {
@@ -11104,11 +11115,14 @@ body.page .slick-dotted.slick-slider {
   color: #ffffff; }
 
 div#video-audio {
-  background: #262626; }
+  background: #262626;
+  margin-top: 25px; }
   div#video-audio h4.section-header {
     color: #ffffff; }
   div#video-audio h3.section-header, div#video-audio a.view-link {
     color: #ffffff; }
+  div#video-audio .flex-video {
+    margin-bottom: 0; }
 
 .artist-video-area {
   margin-bottom: 25px; }
@@ -11125,7 +11139,8 @@ div#video-audio {
 .video-audio-area {
   max-width: 100vw;
   margin-left: 0;
-  margin-right: 0; }
+  margin-right: 0;
+  padding-bottom: 25px; }
 
 .artist-photo-wrapper, .magazine-item-thumb {
   position: relative; }
@@ -11146,6 +11161,26 @@ div#video-audio {
 
 .artist-photo-wrapper:hover .overlay, .magazine-item-thumb:hover .overlay {
   display: block; }
+
+.post-type-archive-artists article {
+  position: relative; }
+  .post-type-archive-artists article .archive__load-more {
+    position: absolute;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    transform: translateX(-50%);
+    bottom: 0; }
+    .post-type-archive-artists article .archive__load-more a {
+      color: #BA0C2F;
+      font-weight: bold; }
+  .post-type-archive-artists article .alert.alert-warning {
+    position: absolute;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    transform: translateX(-50%);
+    bottom: 0; }
 
 .hero-sub-header {
   text-transform: uppercase;
@@ -11191,7 +11226,8 @@ button.hero-button {
     text-align: center;
     color: white;
     max-width: 90%;
-    margin: 0 auto; }
+    margin: 0 auto;
+    padding: 50px 0; }
     .text-banner-wrapper .text-banner .text-banner-area .banner-header {
       font-size: 24px;
       line-height: 2; }
@@ -13026,12 +13062,7 @@ img.circle-thumb {
   border-bottom: 0; }
 
 .post-type-archive-events .accordion-title:before {
-  content: '^';
-  -ms-transform: rotate(180deg);
-  /* IE 9 */
-  -webkit-transform: rotate(180deg);
-  /* Chrome, Safari, Opera */
-  transform: rotate(180deg); }
+  display: none !important; }
 
 .post-type-archive-events :last-child:not(.is-active) > .accordion-title {
   border-bottom: none; }
@@ -13083,14 +13114,31 @@ ul.accordion {
   border-bottom: none; }
 
 .event-listing-details {
-  display: -webkit-box !important;
-  display: -ms-flexbox !important;
-  display: flex !important;
-  line-height: 60px !important;
   font-size: 19px; }
+  .event-listing-details span.more-info {
+    right: 2em;
+    position: absolute; }
 
 span.side-bar-artist-name, .event-detail {
   padding-right: 25px; }
+
+.accordion-title:before {
+  display: none !important; }
+
+@media screen and (max-width: 39.9375em) {
+  .event-listing-details {
+    font-size: 19px;
+    text-align: center;
+    padding-right: 12px; }
+    .event-listing-details .side-bar-artist-details {
+      text-align: left; } }
+
+@media screen and (min-width: 64em) {
+  .event-listing-details {
+    display: -webkit-box !important;
+    display: -ms-flexbox !important;
+    display: flex !important;
+    line-height: 60px !important; } }
 
 .page-template-narrow-text-page #page-full-width {
   max-width: 57.375rem; }
