Toursitems onto tours page

--- a/wp-content/themes/askonasholt2016/assets/scss/templates/_tours-projects.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/templates/_tours-projects.scss
@@ -155,6 +155,10 @@ ul.accordion {
         position: relative;
         border: none;
         border-bottom: 0;
+        display: -webkit-box !important;
+        display: -ms-flexbox !important;
+        display: flex !important;
+        line-height: 60px !important;
     }
     .accordion-title:hover, .accordion-title:focus {
       background-color: transparent;
