Single Post styles

--- a/wp-content/themes/askonasholt2016/assets/scss/templates/_narrow-page.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/templates/_narrow-page.scss
@@ -1,6 +1,7 @@
 .page-template-narrow-text-page {
   #page-full-width {
       max-width: 57.375rem;
+      margin: 0 auto;
   }
 }
 
@@ -8,5 +9,6 @@
 body.single.single-post {
 	#single-post {
 		max-width: 57.375rem;
+		margin: 0 auto;
 	}
 }
