--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_link-banner.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_link-banner.scss
@@ -5,7 +5,7 @@
 	}
 	.link-banner-button {
 		text-align: center;
-		padding: 20px 0;
+		padding: $sitepadding-large 0;
 	}
 	button {
 		border: 1px solid #ffffff;
