--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_filter-header.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_filter-header.scss
@@ -4,9 +4,11 @@
 
 	header.filter-header {
 		@include center;
+		width: 80%;
 		text-align: center;
 	}
 	.artist-categories {
 		@include center(x);
+		width: 80%;
 	}
 }
