Footer, Header Filtering styles

--- a/wp-content/themes/askonasholt2016/assets/scss/foundation.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/foundation.scss
@@ -106,6 +106,7 @@
 @import "modules/schedule";
 @import "modules/main-settings";
 @import "modules/photoswipe";
+@import "modules/newsletter-signup";
 
 
 // Components
