--- a/wp-content/themes/askonasholt2016/assets/scss/global/_temp.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/global/_temp.scss
@@ -5,9 +5,9 @@
 	min-height: 350px;
 }
 
-.artist-filtering-block  {
-	min-height: 300px;
-}
+// .artist-filtering-block  {
+// 	min-height: 300px;
+// }
 
 .temp-testing-mp3 {
 	margin-bottom: 100vh;
