--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_filter-header.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_filter-header.scss
@@ -6,7 +6,7 @@
 		@include center;
 		text-align: center;
 	}
-	.artist-categories {
-		@include center(x);
-	}
+	// .artist-categories {
+	// 	//@include center(x);
+	// }
 }
