--- a/wp-content/themes/askonasholt2016/assets/stylesheets/foundation.css
+++ b/wp-content/themes/askonasholt2016/assets/stylesheets/foundation.css
@@ -6658,9 +6658,6 @@ table.hover tbody tr:nth-of-type(even):hover {
 .artists {
   min-height: 350px; }
 
-.artist-filtering-block {
-  min-height: 300px; }
-
 .temp-testing-mp3 {
   margin-bottom: 100vh; }
 
@@ -9334,9 +9331,19 @@ pre {
   height: 100vh;
   padding: 1rem; }
 
-.title-bar-title a {
-  font-size: 1rem;
-  color: #B9B9B9; }
+.title-bar {
+  position: relative; }
+  .title-bar .title-bar-title {
+    margin: 2em; }
+    .title-bar .title-bar-title a {
+      font-size: 1rem;
+      color: #B9B9B9;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+      transform: translate(-50%, -50%); }
 
 .top-bar .menu .home a {
   font-size: 1rem;
@@ -9469,8 +9476,6 @@ pre {
       padding: 0 30px 0 0; }
     #footer-container #footer i.fa-2x {
       font-size: 1.3em; }
-    #footer-container #footer .column:last-child:not(:first-child), #footer-container #footer .columns:last-child:not(:first-child), #footer-container #footer .columns:last-child:not(:first-child) {
-      text-align: right; }
     #footer-container #footer div.copyright {
       font-weight: 200; }
   #footer-container img.attachment-full.size-full {
@@ -9481,10 +9486,14 @@ pre {
     line-height: 1; }
 
 @media screen and (max-width: 39.9375em) {
-  #footer-container, .textwidget {
+  #footer-container, .textwidget, .widget_nav_men {
     text-align: center; }
   article {
     margin: 25px 0; } }
+
+@media screen and (min-width: 40em) {
+  .column:last-child:not(:first-child), .columns:last-child:not(:first-child), .columns:last-child:not(:first-child) {
+    text-align: right; } }
 
 .sidebar {
   width: 100%;
@@ -9625,6 +9634,23 @@ li.mega-toggle-on ul.mega-sub-menu {
           background-size: inherit; }
   .artist-filtering-block .hero-heading {
     font-family: "GeometricSlab703BT-Light"; }
+
+.artist-filtering-block {
+  min-height: 28em; }
+
+@media screen and (min-width: 40em) {
+  .artist-categories {
+    display: -webkit-box; }
+  .artist-categories li {
+    float: none !important; }
+  .artist-categories {
+    position: absolute;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    transform: translateX(-50%); }
+  .artist-filtering-block {
+    min-height: 20em; } }
 
 .artist-categories {
   position: absolute;
@@ -10236,13 +10262,6 @@ header h1 {
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   text-align: center; }
-
-.artist-filtering-block .artist-categories {
-  position: absolute;
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-  -ms-transform: translateX(-50%);
-  transform: translateX(-50%); }
 
 .acf-map {
   width: 100%;
@@ -10958,6 +10977,11 @@ a.pswp__share--download:hover {
 
 .my-gallery figcaption {
   display: none; }
+
+.mc4wp-form-fields {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
 
 .sites-button {
   background: #FF6908;
