Navigation Tiles at bottom of pages

--- a/wp-content/themes/askonasholt2016/assets/scss/foundation.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/foundation.scss
@@ -127,6 +127,7 @@
 @import "components/artist-quicklook-content";
 @import "components/tour-wrapper";
 @import "components/single_artist_hero";
+@import "components/page-nav-tiles";
 
 
 // Templates
