--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_filter-header.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_filter-header.scss
@@ -7,14 +7,14 @@
 		width: 80%;
 		text-align: center;
 	}
-<<<<<<< HEAD
+
 	// .artist-categories {
 	// 	//@include center(x);
 	// }
-=======
+
 	.artist-categories {
 		@include center(x);
-		width: 80%;
+		//width: 80%;
 	}
->>>>>>> 58f7bd0baab25e498d328259621bae57520f3633
+
 }
