--- a/wp-content/themes/askonasholt2016/assets/scss/global/_settings.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/global/_settings.scss
@@ -45,18 +45,21 @@
 // JB's VARS
 $header-height:   135px;
 
+//colors  **********
 $red:           #BA0C2F;
 $herored:       rgba(186,12,47,0.8);
 $brown:         #B49A81;
 $lightbrown:    #F2F1ED;
 $bgdarkgrey:    #262626;
 $bggrey:        #3E3E3E;
-$brand-red:   $red;
+$brand-red:     $red;
 
+//padding  **********
 $sitepadding: 25px;
 $sitepadding-large: 50px;
 $sitepadding-small: 12.5px;
 
+//fonts  **********
 $serif-font: 'GeometricSlab703BT-Light';
 
 
