--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_navigation.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_navigation.scss
@@ -141,4 +141,22 @@
   background-color: white;
 }
 
+#mega-menu-wrap-top-bar-r #mega-menu-top-bar-r {
+    line-height: 135px;
+    color: initial;
+    background: transparent;
+}
+
+#mega-menu-wrap-top-bar-r {
+  a {
+    color: #000000 !important;
+  }
+
+  background: transparent !important;
+}
+#mega-menu-wrap-top-bar-r #mega-menu-top-bar-r > li.mega-menu-item.mega-toggle-on > a.mega-menu-link, #mega-menu-wrap-top-bar-r #mega-menu-top-bar-r > li.mega-menu-item > a.mega-menu-link:hover, #mega-menu-wrap-top-bar-r #mega-menu-top-bar-r > li.mega-menu-item > a.mega-menu-link:focus {
+  background: transparent !important;
+}
+
+
 
