--- a/wp-content/themes/askonasholt2016/assets/scss/foundation.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/foundation.scss
@@ -95,6 +95,7 @@
 @import "modules/searchbar";
 @import "modules/editor-style";
 @import "modules/nav-bar";
+@import "modules/filtering-block-general";
 @import "modules/artist-filtering";
 @import "modules/link-banner";
 @import "modules/single-page-nav";
