--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_artist-filtering.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_artist-filtering.scss
@@ -1,13 +1,13 @@
-.artist-filtering-block {
-	background-color: $lightbrown;
-	position: relative;
-	@include full-bg;
-	background-repeat: repeat-x;
-	background-size: inherit;
-	.hero-heading {
-		font-family: $serif-font;
-	}
-}
+// .artist-filtering-block {
+// 	background-color: $lightbrown;
+// 	position: relative;
+// 	@include full-bg;
+// 	background-repeat: repeat-x;
+// 	background-size: inherit;
+// 	.hero-heading {
+// 		font-family: $serif-font;
+// 	}
+// }
 
 // .artist-categories {
 // 	position: absolute;
