--- a/wp-content/themes/askonasholt2016/assets/scss/templates/_splash-page.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/templates/_splash-page.scss
@@ -7,6 +7,7 @@ body.home {
     height: 100vh;
     width: 100%;
     position: relative;
+    @include full-bg;
 
     //SVG
     path#Fill-1 {
@@ -26,7 +27,7 @@ body.home {
   }
 
   .continue-link {
-      @include center (x);
+      @include center(x);
       bottom: 0;
       width: 100%;
       text-align: center;
