Events Page including Online Performances

--- a/wp-content/themes/askonasholt2016/assets/scss/foundation.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/foundation.scss
@@ -107,6 +107,7 @@
 @import "modules/main-settings";
 @import "modules/photoswipe";
 @import "modules/newsletter-signup";
+@import "modules/online-item";
 
 
 // Components
