--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_link-banner.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_link-banner.scss
@@ -9,10 +9,9 @@
 	}
 	button {
 		border: 1px solid #ffffff;
-		padding: 1em; 
+		padding: 1em 4em; 
 		color: #ffffff;
 		font-weight: bold;
-		width: 65%;
 	}
 }
 
