Single Artist Hero download/share

--- a/wp-content/themes/askonasholt2016/assets/scss/components/_artist-quicklook-content.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/components/_artist-quicklook-content.scss
@@ -49,8 +49,9 @@ ul.quick-look-links {
 	margin: $sitepadding 0;
 	li {
 		padding: 5px 0;
-		span {
+		span, a {
 			vertical-align: top;
+			color: initial;
 		}
 	}
 	 a.share-button {
