Nav font size and artists style

--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_magazine-item.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_magazine-item.scss
@@ -2,7 +2,7 @@
 
 .magazine-item {
 	height: 450px; //temp
-	border: 1px solid gray;
+	border: 1px solid #dddddd;
 	margin-bottom: 2em;
 	transition: 0.5s;
 	background-color: #ffffff;
