--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_nav-bar.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_nav-bar.scss
@@ -106,6 +106,10 @@ li.mega-toggle-on {
 	}
 }
 
+#mega-menu-wrap-top-bar-r #mega-menu-top-bar-r > li.mega-menu-item > a.mega-menu-link {
+	font-size: 20px;
+}
+
 
 // *****************
 //SEARCH AREA STYLES *
