--- a/wp-content/themes/askonasholt2016/assets/scss/global/_general.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/global/_general.scss
@@ -14,6 +14,10 @@
     font-family: $serif-font;
 }
 
+.serif {
+    font-family: $serif-font;
+}
+
 p {
     font-size: 20px;
     line-height: 1.8;
