--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_searchbar.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_searchbar.scss
@@ -3,7 +3,7 @@ body.search-bar-is-visible {
     //display: block;
     height: 100px;
     max-width: 100%;
-    padding: $sitepadding;
+    padding: 30px;
     transition: 0.5s;
   }
 
