--- a/wp-content/uploads/maxmegamenu/style.css
+++ b/wp-content/uploads/maxmegamenu/style.css
@@ -1,4 +1,4 @@
-/** Wednesday 9th of November 2016 02:07:58 PM (core) **/
+/** Friday 2nd of December 2016 03:32:14 PM (core) **/
 
 #mega-menu-wrap-top-bar-r, #mega-menu-wrap-top-bar-r #mega-menu-top-bar-r, #mega-menu-wrap-top-bar-r #mega-menu-top-bar-r ul.mega-sub-menu, #mega-menu-wrap-top-bar-r #mega-menu-top-bar-r li.mega-menu-item, #mega-menu-wrap-top-bar-r #mega-menu-top-bar-r a.mega-menu-link {
   -moz-transition: none;
