--- a/wp-content/themes/askonasholt2016/assets/scss/components/_center-text-heroes.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/components/_center-text-heroes.scss
@@ -6,8 +6,9 @@
 	max-height: 500px;
 	@include full-bg;
 	text-align: center;
+	margin-bottom: $sitepadding-large;
 	.center-hero-text {
 		@include center;
-		color: #ffffff;
+		// /color: #ffffff;
 	}
 }
