--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_artist-filtering.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_artist-filtering.scss
@@ -13,6 +13,11 @@
 	min-height: 28em;
 }
 
+.artist-filtering-block {
+    position: relative;
+}
+
+
 //making categoried fit on one line
 
 @include breakpoint(medium up) {
