--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_magazine-item.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_magazine-item.scss
@@ -68,7 +68,7 @@
 	box-shadow: 6px 6px 5px 0px rgba(219,219,219,1);
 }
 
-body.post-type-archive-magazine {
+body.blog {
 	article.main-content {
 		position: relative;
 	}
