--- a/wp-content/themes/askonasholt2016/assets/scss/templates/_page-full-width.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/templates/_page-full-width.scss
@@ -1,10 +1,10 @@
-#page-full-width {
-  @include grid-row();
-  margin-top: 3rem;
+// #page-full-width {
+//   @include grid-row();
+//   //margin-top: 3rem;
 
-  .main-content {
-    @include breakpoint(small) {
-      @include grid-column(12);
-    }
-  }
-}
+//   .main-content {
+//     @include breakpoint(small) {
+//       @include grid-column(12);
+//     }
+//   }
+// }
