mega menu on mobile…

--- a/wp-content/themes/askonasholt2016/assets/scss/global/_settings.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/global/_settings.scss
@@ -43,7 +43,8 @@
 @import '../../components/foundation-sites/scss/util/util';
 
 // JB's VARS
-$header-height:   135px;
+$mob-header-height:   82px;
+$header-height:       135px;
 
 //colors  **********
 $red:           #BA0C2F;
