--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_nav-bar.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_nav-bar.scss
@@ -71,7 +71,7 @@ nav#site-navigation {
     	transition: 0.5s;
     	background-color: transparent;
     	float: right;
-    	line-height: $header-height;
+    	// line-height: $header-height;
     	height: 50px;
     }
     .top-bar-left {
