--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_navigation.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_navigation.scss
@@ -31,62 +31,66 @@
 //// styling mobile menu ///////
 //// this is a bit hacky, but that's mega menu for you :) ///////
 
-.title-bar {
-  // height: 100px;
-}
+@include breakpoint(small only){
 
-// .title-bar .title-bar-title {
-//   display: none;
-// }
-
-header#masthead .top-bar-right {
-  padding-left: 0 !important;
-  position: absolute;
-  z-index: 10;
-  // top: 10px;
-  // left: 10px;
-  top: 0;
-  left: 0;
-  .mega-toggle-block {
-    height: $mob-header-height;
+  .title-bar {
+    // height: 100px;
   }
 
-}
-
-#mega-menu-wrap-top-bar-r .mega-menu-toggle {
-  background-color: transparent;
-  // ul {
-  //   background-color: $white;
+  // .title-bar .title-bar-title {
+  //   display: none;
   // }
-}
 
-#mega-menu-wrap-top-bar-r #mega-menu-top-bar-r {
-  li {
-    background-color: $white !important;
+  header#masthead .top-bar-right {
+    padding-left: 0 !important;
+    position: absolute;
+    z-index: 10;
+    // top: 10px;
+    // left: 10px;
+    top: 0;
+    left: 0;
+    .mega-toggle-block {
+      height: $mob-header-height;
+    }
+
   }
-}
 
-#mega-menu-wrap-top-bar-r .mega-menu-toggle .mega-toggle-block-1:before,
-#mega-menu-wrap-top-bar-r .mega-menu-toggle .mega-toggle-block-1:after {
-  color: $black;
-}
+  #mega-menu-wrap-top-bar-r .mega-menu-toggle {
+    background-color: transparent;
+    // ul {
+    //   background-color: $white;
+    // }
+  }
 
-.header-search-toggle {
-  position: absolute;
-  top: 0;
-  left: 0;
-}
+  #mega-menu-wrap-top-bar-r #mega-menu-top-bar-r {
+    li {
+      background-color: $white !important;
+    }
+  }
 
-#mega-menu-wrap-top-bar-r .mega-menu-toggle {
-  width: 100px;
-  position: absolute;
-  right: 0;
-}
+  #mega-menu-wrap-top-bar-r .mega-menu-toggle .mega-toggle-block-1:before,
+  #mega-menu-wrap-top-bar-r .mega-menu-toggle .mega-toggle-block-1:after {
+    color: $black;
+  }
 
-#mega-menu-wrap-top-bar-r .mega-menu-toggle.mega-menu-open + #mega-menu-top-bar-r {
-  top: $mob-header-height;
-  position: absolute;
-  width: 100%;
+  .header-search-toggle {
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+
+  #mega-menu-wrap-top-bar-r .mega-menu-toggle {
+    width: 100px;
+    position: absolute;
+    right: 0;
+  }
+
+  #mega-menu-wrap-top-bar-r .mega-menu-toggle.mega-menu-open + #mega-menu-top-bar-r {
+    top: $mob-header-height;
+    position: absolute;
+    width: 100%;
+  }
+
 }
 
 //// end styling mobile menu ///////
